syntax = "proto3";

package product.rpc.product;
option go_package = "promotion-service/app/transport/proto-gen/rpc";
import "app/protobuf/message/promotion.proto";

service ProductService {
  rpc GetProductById(product.message.product.ProductRequest) returns (product.message.product.ProductResponse){};
  rpc CreateProduct(product.message.product.ProductRequest) returns (product.message.product.ProductResponse){};
  rpc UpdateProduct(product.message.product.ProductRequest) returns (product.message.product.ProductResponse){};
  rpc GetProducts(product.message.product.ProductRequest) returns (product.message.product.ProductResponses){};
}
